--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>me.hexsook</groupId>
         <artifactId>originext</artifactId>
-        <version>1.0.0-beta1</version>
+        <version>dev</version>
     </parent>
 
     <artifactId>originext-common</artifactId>
-    <version>1.0.0-beta2</version>
+    <version>dev</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
