--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.hexsook</groupId>
     <artifactId>originext</artifactId>
-    <version>1.0.0-beta1</version>
+    <version>dev</version>
     <packaging>pom</packaging>
 
     <modules>
