--- a/config/pom.xml
+++ b/config/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>me.hexsook</groupId>
+        <groupId>io.github.hexsook</groupId>
         <artifactId>originext</artifactId>
-        <version>dev</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>originext-config</artifactId>
-    <version>dev</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
